[package]
name = "sounding-data"
version = "0.1.0"
authors = ["Ryan Leach <clumsycodemonkey@gmail.com>"]
description = "A crate to manage an archive of sounding files."
repository = "https://github.com/rnleach/sounding-data.git"
readme = "README.md"
keywords = ["meteorology", "weather", "sounding"]
categories = ["science"]
license = "MIT"
edition = "2018"
publish = false

[badges]
appveyor = { repository = "rnleach/sounding-data", branch = "master", service = "github" }
travis-ci = { repository = "rnleach/sounding-data", branch = "master" }

[dependencies]
chrono = "0.4.2"
flate2 = {version = "1.0", features = ["rust_backend"], default-features = false }
rusqlite = { version = "0.16", features = ["bundled", "chrono"], default-features = false }
sounding-analysis = {git = "https://github.com/rnleach/sounding-analysis.git", branch="dev"}
strum = "0.13"
strum_macros = "0.13"

[dev-dependencies]
sounding-bufkit = {git = "https://github.com/rnleach/sounding-bufkit.git", branch="dev"}
tempdir = "0.3"

[profile.release]
lto = true
panic = 'abort'

