[package]
name = "sounding-data"
version = "0.3.0"
authors = ["Ryan Leach <clumsycodemonkey@gmail.com>"]
description = "A crate to manage an archive of sounding files."
repository = "https://github.com/rnleach/sounding-data.git"
readme = "README.md"
keywords = ["meteorology", "weather", "sounding"]
categories = ["science"]
license = "MIT"
edition = "2018"
publish = false

[badges]
appveyor = { repository = "rnleach/sounding-data", branch = "master", service = "github" }
travis-ci = { repository = "rnleach/sounding-data", branch = "master" }

[dependencies]
chrono = "0.4.2"
flate2 = {version = "1.0", features = ["rust_backend"], default-features = false }
fnv = "1"
rusqlite = { version = "0.18", features = ["chrono"], default-features = false }
sounding-analysis = "^0.11.0"
sounding-bufkit = "^0.11.0"
strum = "0.15"
strum_macros = "0.15"

[dev-dependencies]
metfor = "0.7"
tempdir = "0.3"

[profile.release]
lto = true
panic = 'abort'
